update v2.6 Podział na lokalne ładowanie i dynamiczne

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/mainstyle.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/x-icon" href="icons/icon_iza.ico">
     <script src="js/mainJs.js" type="application/javascript"></script>
-    <script src="js/loadPhotos.js" type="application/javascript"></script>
+    <script src="js/loadPhotosLocal.js" type="application/javascript"></script>
     <link rel="stylesheet" href="plugins/notify.css" />
     <script src="plugins/notify.js"></script>
 </head>
